--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  gap: ^3.0.1
+  dio: ^5.4.1
+  connectivity_plus: ^5.0.2
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.4
+  get_it: ^7.6.7
+  dartz: ^0.10.1
+  logger: ^2.0.2+1
+  flutter_secure_storage: ^9.0.0
+  flash: ^3.1.0
+  flutter_animate: ^4.5.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/img/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
