feat: Making progress with app, done some refactoring and added features: - Added theming - Added theme switcher button in Profile's App bar - Added bloc wraper at top level - Added SingleChildScrollView in login page for smaller screen - Refactor Auth cubit with more readable code - Added AuthNotifier for refreshListenable field in GoRouter - Added Product page (UI) with business logic - Added Web Api Service Base for more smooth network request - Added more utils for better UX experience - Added class for constants

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   go_router: ^13.2.0
   hive_flutter: ^1.1.0
   path_provider: ^2.1.2
+  google_fonts: ^6.2.1
+  bottom_navy_bar: ^6.1.0
 
 dev_dependencies:
   flutter_test:
