--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ dependencies:
   path_provider: ^2.1.2
   google_fonts: ^6.2.1
   bottom_navy_bar: ^6.1.0
+  carousel_slider: ^5.0.0
+  flutter_native_splash: ^2.4.1
+  animated_splash_screen: ^1.3.0
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
